Fix "Toolkit not initialized" using JFXPanel
Not sure why this works, but it does :) There's probably a better
solution.